# dgx-spark-gemms

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  setup.sh
nvcomp/: nvfp4_gemv.cu
